--- a/preamble/SoM.tex
+++ b/preamble/SoM.tex
@@ -61,7 +61,7 @@
 % Font-related
 \usepackage{amsmath,amsfonts,amssymb,amsthm}
 \usepackage{bm}
-\usepackage{ulem}
+\usepackage[normalem]{ulem}
 
 % Bibliography: note that only natbib is compatible at present
 \usepackage[square,sort,comma,numbers]{natbib} %\usepackage{natbib}
