--- a/main.tex
+++ b/main.tex
@@ -16,9 +16,11 @@
 
 \maketitle
 
-This is an instruction and demonstration of University of Edinburgh the School of Mathematics template for HTML notes converted by BookML. The HTML version of this document can be found as \href{https://uoe-school-of-mathematics.github.io/BookML-Workflow-Documentation/index.html}{a GitHub pages site}. The source code is available in \href{https://github.com/UoE-School-of-Mathematics/BookML-Workflow-Documentation}{a GitHub repository}.
+This is a guidance document and demonstration of the template for HTML notes converted by BookML used by the School of Mathematics at the University of Edinburgh. The HTML version of this document can be found as \href{https://uoe-school-of-mathematics.github.io/Workflow-Documentation/index.html}{a GitHub pages site}. \href{https://github.com/UoE-School-of-Mathematics/Workflow-Documentation}{This GitHub repository} contains the source LaTeX markup for the HTML site.
 
-BookML is a small wrapper around LaTeXML and is created by Vincenzo Mantova at the University of Leeds, source code and local instalation instructions are available at \url{github.com/vlmantova/bookml} and documentation at \url{vlmantova.github.io/bookml/}.
+There is a \href{https://github.com/UoE-School-of-Mathematics/Workflow-Template-Blank}{blank template repository} which should be used for your own course materials; see the documentation for more details on usage.
+
+BookML is a small wrapper around LaTeXML, created and maintained by Vincenzo Mantova at the University of Leeds. The source code and local installation instructions are available on the \href{https://github.com/vlmantova/bookml}{BookML repository}, and documentation is published at \url{https://vlmantova.github.io/bookml/}.
 
 
 \tableofcontents
@@ -47,7 +49,7 @@ BookML is a small wrapper around LaTeXML and is created by Vincenzo Mantova at t
 \input{instructions}
 \input{demo}
 
-\chapter{Appendicies}
+\chapter{Appendices}
 \input{context}
 \input{zip}
 
