--- a/preamble/custom.tex
+++ b/preamble/custom.tex
@@ -37,7 +37,7 @@
         {\end{lstlisting}}
 \fi
 
-% colapsable solution
+% collapsible solution
 \begin{comment}
 \iflatexml  
     \renewenvironment{solution} 
