--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,9 @@
 \documentclass[12pt,oneside]{book}
 
-\newcommand\coursename{BookML in University of Edinburgh}
+\newcommand\coursename{BookML at the University of Edinburgh}
 \newcommand\coursecode{MATXXXXXXX}
 \newcommand\courseauthor{Steven O'Hagan, Hayden Maudsley-Barton, and Charlotte Desvages}
-\newcommand\courseyear{2024--25}
+\newcommand\courseyear{2025--26}
 \newcommand\coursedescription{A description of the course.}
 
 \input{preamble/SoM}
@@ -37,6 +37,12 @@ BookML is a small wrapper around LaTeXML, created and maintained by Vincenzo Man
 
 %    Change page number to 6 if a dedication is present.
 % \setcounter{page}{4}
+
+
+% Copyright information (for published pages)
+\iflatexml
+    \copyright The University of Edinburgh, 2025.
+\fi
 
 
 
