--- a/instructions.tex
+++ b/instructions.tex
@@ -6,13 +6,14 @@
 There are several tools available to perform conversion of \LaTeX\ to HTML. Here, we focus on \href{https://vlmantova.github.io/bookml/}{BookML}, which uses \href{https://math.nist.gov/~BMiller/LaTeXML/}{LaTeXML} in the background; note that this is the same technology used by \href{https://info.arxiv.org/about/accessible_HTML.html}{arXiv} to produce HTML versions of research papers from the \verb|.tex| source.
 
 There are three steps to converting LaTeX notes to HTML using BookML:
+
 \begin{enumerate}
-    \item write notes in \LaTeX{};
+    \item write notes in \LaTeX{}, optionally using the School template;
     \item use BookML to convert \LaTeX{} code to HTML;
     \item share the HTML version with students.
 \end{enumerate}
-Your precise workflow will depend on how you wish to share the HTML version with students and whether you prefer to work in Overleaf, with GitHub or on your local machine. Some possible workflows are summarised in the figure below.
 
+Your precise workflow will depend on how you wish to share the HTML version with students, whether you prefer to work in Overleaf or write \LaTeX{} locally, and whether you prefer the HTML conversion to be dealt with in the cloud (via GitHub) or on your local machine (via Docker). Some possible workflows are summarised in the figure below.
 
 \begin{figure}[h]
     \centering
@@ -26,62 +27,66 @@ Your precise workflow will depend on how you wish to share the HTML version with
     \label{fig:workflow}
 \end{figure}
 
-We give details of two of these workflows below. You may wish to deviate from these documented workflows if you feel comfortable doing so. 
+We give detailed guidance for two of these workflows. You can mix-and-match or deviate from these documented workflows if you feel comfortable doing so.
+
 
 \section{GitHub Workflow}
 
-If you are happy to write your \LaTeX{} notes in Overleaf, to have your source code stored (privately) on GitHub and to have your HTML notes available on a public website then the \textbf{Overleaf \textrightarrow{} GitHub \textrightarrow{} GitHub Pages} workflow will likely be most convenient. After the initial setup, there is no need to interact directly with GitHub.
+The simplest way to generate HTML course materials makes use of GitHub to perform the conversion in the cloud, which means that you will not need to install anything on your computer. All you need to do is upload your \LaTeX{} source code to a (private) GitHub repository; the conversion to HTML is then done automatically.
+
+Additionally, if you use Overleaf, you can set it up to connect to GitHub. After the initial setup, there will be no need to interact directly with GitHub. Here, we explain this particular workflow. The main steps are as follows:
 
 \begin{enumerate}[align=left]
-    \item[Step 1:] Make a copy of the course notes template from GitHub
-    \item[Step 2:] Create an Overleaf project linked your GitHub repository
-    \item[Step 3:] Write your notes in Overleaf and sync with GitHub
-    \item[Step 4a:] Download the generated HTML version of your notes from GitHub as a SCORM package and upload to learn
-    \item[Step 4b:] Publish notes as GitHub Pages public website
+    \item[Step 1:] Make a copy of the course notes template from GitHub.
+    \item[Step 2:] Create an Overleaf project, link it to your GitHub repository.
+    \item[Step 3:] Write your notes in Overleaf, and sync with GitHub.
+    \item[Step 4:] Download the generated HTML version of your notes from GitHub as a SCORM package, and upload it directly to Learn.
+    \item[Step 5 (optional):] Easily publish your notes as a public website using GitHub Pages.
 \end{enumerate}
 
 
-\subsection{Step 1: Make a copy of the course notes template from GitHub}
+\subsection{Step 1: Make a copy of the course notes template on GitHub}
+\label{ssec:github}
 
 \subsubsection{Create a GitHub account and join the UoE School of Mathematics organization}
 
-If you already have a GitHub account then please  \href{mailto:lt@maths.ed.ac.uk?subject=Please%20add%20me%20to%20SoM%20GitHub%20organization}{email the Learning Technology Team lt@maths.ed.ac.uk} giving your GitHub username and ask to be added to the UoE School of Mathematics GitHub organization. 
+If you already have a GitHub account, then please \href{mailto:lt@maths.ed.ac.uk?subject=Please%20add%20me%20to%20SoM%20GitHub%20organization}{email the Learning Technology Team lt@maths.ed.ac.uk} giving your GitHub username, and ask to be added to the UoE School of Mathematics GitHub organization. 
 
-If you do not have a GitHub account then please \href{mailto:lt@maths.ed.ac.uk?subject=Please%20add%20me%20to%20SoM%20GitHub%20organization}{email the Learning Technology Team lt@maths.ed.ac.uk} and ask for an invitation to the UoE School of Mathematics GitHub organization. You will receive an email from GitHub with a link to create an account and join the SoM organization. Please note that the email may not render properly in your mail client -- the link may appear as an empty box but this is the invitation link!
-
+If you do not have a GitHub account, then please \href{mailto:lt@maths.ed.ac.uk?subject=Please%20add%20me%20to%20SoM%20GitHub%20organization}{email the Learning Technology Team lt@maths.ed.ac.uk} and ask for an invitation to the UoE School of Mathematics GitHub organization. You will receive an email from GitHub with a link to create an account and join the SoM organization. Please note that the email may not render properly in your mail client -- the link may appear as an empty box but this is the invitation link!
 
 
 \begin{figure}[h]
     \centering
-    \includegraphics[alt={A blank rectangular box with the text ``This invitation will expire in 7 days'' written above.}]{img/GitHub-invitation.png}
+    \includegraphics{img/GitHub-invitation.png}
     \caption{GitHub invitation link when it appears empty.}
+    \alttext{A blank rectangular box with the text ``This invitation will expire in 7 days'' written above.}
     \label{fig:gh-invitation}
 \end{figure}
 
 
 \subsubsection{Make a new GitHub repository for your notes using the SoM template}
 
-Sign in to your GitHub account and see the \href{https://github.com/orgs/UoE-School-of-Mathematics/repositories?q=template%3Atrue+archived%3Afalse}{School of Maths organization template reposititories}.
-
-There are two template reposititories in the organization, \href{https://github.com/UoE-School-of-Mathematics/BookML-Workflow-Documentation}{BookML-Workflow-Documentation} contains the source code for this documentation and \href{https://github.com/UoE-School-of-Mathematics/Workflow-Template-Blank}{Workflow-Template-Blank} only contains preambles and SoM styling. Either of these can be used as a template for your course notes, the blank version will be easiet to get started with, but the documentation version could be good for reference.
-
-Click the ``Use this template'' button at the top right of the page.
+Sign in to your GitHub account, and go to the \href{https://github.com/UoE-School-of-Mathematics/Workflow-Template-Blank}{blank template repository}. Then, click the ``Use this template'' button at the top right of the page. This will create a new repository for you containing the template files.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\textwidth, alt={A screenshot of a webpage showing a green ``Use this template'' button circled in red.}]{img/use_template.png}
+    \includegraphics[width=0.5\textwidth]{img/use_template.png}
+    \alttext{A screenshot of a webpage showing a green ``Use this template'' button circled in red.}
     \caption{``Use this template'' button is at the top right of the page.}
     \label{fig:use-template}
 \end{figure}
 
-The ``Create a new repository'' page has some options -- the defaults are fine. \textbf{Please ensure you the box to ``Include all branches'' is NOT ticked.} By default, your notes will be stored in a private repository on GitHub in the UoE School of Mathematics organization. You are free to change these settings if you wish.
+The ``Create a new repository'' page has some options -- the defaults are fine. \textbf{Please ensure you the box to ``Include all branches'' is NOT ticked.} By default, your notes will be stored in a private repository on GitHub in the UoE School of Mathematics organization. You are free to change these settings if you wish\footnote{If you prefer the repository to be in your own account instead, one important difference is that the GitHub Actions minutes needed to perform the HTML conversion in the cloud will be taken from your own GitHub account's quota. The SoM organization has a larger allowance; we encourage you to use it.}.
 
 Choose an appropriate repository name; we recommend that you choose your \textbf{course abbreviation} (e.g. FAC, IMU, IDS, FPM\ldots), or include it in the name.
 
 Please wait at least 3~minutes before moving on. GitHub needs some time to initialise the project.
 
+\textit{Note: steps 2 and 3 below use Overleaf, which makes things easier if you haven't used GitHub before. If you prefer to work on your notes locally, and you are comfortable working with a GitHub repository, you can simply clone your new repository, and push changes to GitHub every time you want to update the HTML version. If you do this, you can skip directly to section \ref{ssec:download}.}
 
-\subsection{Step 2: Create an Overleaf project linked your GitHub repository}
+
+\subsection{Step 2: Create an Overleaf project linked to your GitHub repository}
+\label{ssec:overleaf}
 
 \subsubsection{Link your Overleaf account to your GitHub account}
 
@@ -89,9 +94,7 @@ Visit your \href{https://www.overleaf.com/user/settings}{Overleaf account settin
 
 \subsubsection{Make an Overleaf project from your GitHub repository}
 
-At this stage you should have a GitHub repository created from the SoM template.
-
-In Overleaf, create a new project ensuring you choose \textbf{Import from GitHub}. Then choose \textbf{Import to Overleaf} for the appropriate repository.
+At this stage, you should have a GitHub repository created from the SoM template. In Overleaf, create a new project, ensuring you choose \textbf{Import from GitHub}. Then, choose \textbf{Import to Overleaf} for the repository you created previously.
 
 \begin{figure}[h]
     \centering
@@ -101,14 +104,13 @@ In Overleaf, create a new project ensuring you choose \textbf{Import from GitHub
     \label{fig:gh-overleaf-new}
 \end{figure}
 
-Once this is complete, you should see a copy of this documentation in your own Overleaf project.
+Once this is complete, you should have a new Overleaf project containing the template files.
 
 
 \subsection{Step 3: Write your notes in Overleaf and sync with GitHub}
+\label{ssec:sync}
 
-At this stage you should have an Overleaf project for your notes, linked to your GitHub repository, and have an action set up to automatically convert your notes whenever changes are synched. 
-
-Now you can work on your notes just like any other Overleaf project.
+Now you can work on your notes just like with any other Overleaf project.
 
 Whenever you want to publish changes to the HTML version, you need to push the changes to your GitHub repository. To do this, in Overleaf, click \textbf{Menu} (top left) and then choose \textbf{GitHub} under the \textbf{Sync} menu.
 
@@ -122,34 +124,37 @@ Whenever you want to publish changes to the HTML version, you need to push the c
 
 Click \textbf{Push Overleaf changes to GitHub}, enter a description of the changes you have made (optional) and then click \textbf{Sync}.
 
-\subsection{Step 4a: Download the generated HTML version of your notes from GitHub as a SCORM package and upload to learn}
+\subsection{Step 4: Download the generated HTML version of your notes from GitHub as a SCORM package, and upload it to Learn}
+\label{ssec:download}
 
-To download the HTML version of your notes, visit your GitHub repository, scroll to releases in the right menu, and click on the \texttt{SCORM.main.zip} file. This will download a zip file containing the HTML version of your notes. 
-\textbf{Note:} the word main may be replaced by the name of any .tex file with \verb|documentclass| in it. This could be multiple.
+% Every time you sync new changes to GitHub, the HTML notes will recompile automatically (this takes a few minutes). Visit your GitHub repository; a green check mark above your files indicates that this has completed. Scroll to ``Releases'' in the right-side menu, and click on the \texttt{SCORM.main.zip} file\footnote{The word \texttt{main} may be replaced by the name of any .tex file with \verb|documentclass| in it. If you have multiple separate documents in your project, you will get multiple SCORM files to upload on Learn separately.}. This will download a zip file containing the HTML version of your notes.
 
-\subsubsection{Upload SCORM}
+
+\subsubsection{Upload the SCORM file}
 \label{ssec:scorm}
 
 \begin{itemize}
     \item On your Learn page, create a new content item.
     \item Choose the ``SCORM package'' option.
-    \item Upload the file \verb|SCORM.myfolder.zip|.
+    \item Upload the file \verb|SCORM.main.zip|.
     \item Once it's uploaded, untick the ``Mark SCORM'' checkbox, and click ``Save''.
 \end{itemize}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.5\textwidth, alt={A screenshot of the ``Create content'' menu on Learn Ultra showing different options. The last option is ``SCORM package''.}]{img/scorm.png}
+    \includegraphics[width=0.5\textwidth]{img/scorm.png}
     \caption{The ``SCORM package'' option on Learn Ultra.}
+    \alttext{A screenshot of the ``Create content'' menu on Learn Ultra showing different options. The last option is ``SCORM package''.}
     \label{fig:scorm}
 \end{figure}
 
 
-\subsection{Step 4b: Publish notes as GitHub Pages public website}
+\subsection{Step 5 (optional): Publish your notes as a public website}
+\label{ssec:pub}
 
-Alternatively, you can publish your notes as a public website using GitHub Pages. The code for this is already included in the GitHub action, you will just need to publish the site. This means you only need to add a link to your notes on Learn once and this will always point to the most up-to-date version of your notes.
+Additionally, or alternatively, you can publish your notes as a \textbf{public website} using GitHub Pages. The advantage of doing this, is that this is all already automated; so there is no need for you to manually update your published site every time you update your notes (as you need to do when uploading to Learn). Instead, you can simply add a link to your published website on your Learn page, and this will always point to the most up-to-date version of your notes.
 
-To set up a publicly-accessible website with your HTML notes in GitHub, first visit your new repository in GitHub. In the top menu click \textbf{Settings} then \textbf{Pages} in the left menu.
+Your site is already built automatically by using the GitHub template, but it's not published by default. To set up a publicly-accessible website with your HTML notes, first visit your repository on GitHub. In the top menu, click \textbf{Settings}, then \textbf{Pages} in the left menu.
 
 Under \textbf{Build and deployment}, look for the \textbf{Branch} option. From the \textbf{Select branch} option, choose \texttt{gh-pages} and \textbf{Select folder} \texttt{/docs}.
 
@@ -171,10 +176,19 @@ Wait 1~minute then refresh the page. You should now see a link to the publicly-a
     \label{fig:gh-site-link}
 \end{figure}
 
-Behind the scenes, GitHub will now rebuild website of your notes and update the public website. You don't need to interact directly with GitHub again. 
+Behind the scenes, GitHub will now automatically rebuild your HTML notes and update the public website every time you synchronise changes with GitHub. This was a one-time setup; you don't need to interact directly with GitHub again.
+
+\subsubsection*{Copyright and license}
+\label{ssec:pub:license}
+
+As per UK law, as explained in \href{https://library.ed.ac.uk/library-help/copyright/copyright-teaching}{University guidance}, the University ``is the first owner of the rights of any work made in the course of your employment'', and this applies to teaching materials. By default, this is attributed at the bottom of the index page of your published site.
+
+The University also has an \href{https://open.ed.ac.uk/how-to-guides/}{Open Educational Resources policy and guidance}; we encourage you to consider publishing your course materials as an open educational resource (and change the copyright notice accordingly).
 
 
 \section{Local workflow}
+
+Another way to create and maintain HTML course materials is to convert your notes locally on your machine. To do this, you will need to either install Docker, or directly install BookML and its dependencies. We give detailed instructions for the Docker workflow, as this is generally easier to set up and use.
 
 \subsection{Using Docker}
 \label{ssec:docker}
@@ -234,7 +248,9 @@ Note that this requires ``Make Me Admin'' on Windows managed machines.
 \subsubsection{Conversion}
 \label{sssec:conversion}
 
-Before you start, for better results, add \verb|\usepackage{bookml/bookml}| to the preamble of your \verb|.tex| file(s) (after the \textbackslash\verb| documentclass{...}| command). This is not necessary, if using the template provided by the School of Mathematics. This package may cause an error in overleaf, unless you upload the BookML folder to your project.
+Before you start, for better results, add \verb|\usepackage{bookml/bookml}| to the preamble of your \verb|.tex| file(s) (after the \textbackslash\verb| documentclass{...}| command). This is not necessary if you are using the \href{https://github.com/UoE-School-of-Mathematics/Workflow-Template-Blank/releases}{template provided here by the School of Mathematics} (download and extract ``Source code (zip)'').
+
+Note that if you use Overleaf, the \verb|bookml/bookml| package will cause an error, unless you also add the \verb|bookml| folder to your project (found in \verb|release.zip| on the \href{https://github.com/vlmantova/bookml/releases}{BookML repository}).
 
 \paragraph{Option (a) - using the command line:}
 
@@ -256,93 +272,90 @@ Before you start, for better results, add \verb|\usepackage{bookml/bookml}| to t
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth, alt={A screenshot of Docker Desktop, with the cursor placed on the ``Run'' button.}]{img/docker_desktop_run.png}
+    \includegraphics[width=\textwidth]{img/docker_desktop_run.png}
     \caption{Step 1: click the `play' button to run the command.}
+    \alttext{A screenshot of Docker Desktop, with the cursor placed on the ``Run'' button.}
     \label{fig:docker_desktop_run}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=\textwidth, alt={A screenshot of Docker Desktop, showing where to input the folder path.}]{img/docker_desktop_path.png}
+    \includegraphics[width=\textwidth]{img/docker_desktop_path.png}
     \caption{Step 2: give Docker the path to your folder.}
+    \alttext{A screenshot of Docker Desktop, showing where to input the folder path.}
     \label{fig:docker_desktop_path}
 \end{figure}
 
-\subsection{Not using Docker}
+\subsection{Installing BookML and dependencies manually}
 \label{ssec:install}
 
-If you prefer to install the necessary packages and dependencies to your machine, you can follow the instructions in the \href{https://vlmantova.github.io/bookmlleeds/#S1}{BookML documentation}.
+If you prefer to install the necessary packages and dependencies to your machine instead of using Docker, instructions are given in the \href{https://vlmantova.github.io/bookmlleeds/#S1}{BookML documentation} for the installation and the conversion to HTML.
 
 
-
-
+\subsection{Sharing with students}
+\label{ssec:local:share}
 
 Running BookML will produce PDF files (with \verb|pdflatex|), as well as \verb|.zip| files containing the HTML versions of your \verb|.tex| files, which can be uploaded directly to Learn. The output (both PDF and HTML) will be found in the same folder as your \verb|.tex| files.
-Upload the \verb|SCORM.main.zip| to Learn as described in \ref{ssec:scorm}.
+Upload \verb|SCORM.yourfile.zip| directly to Learn as described in \ref{ssec:scorm}.
 
-
-To convert files locally (on your own machine), there are two options: installing the required packages and dependencies yourself, or using a Docker container. 
-This image is 4.6GB so be prepared for a large download.
-Whichever option you use, conversion is likely to take a few hours if you have large files (\(\approx\) 200 pages). 
-
-
-
+The \verb|yourfile.zip| (without the \verb|SCORM|) files contain a standalone HTML site, which you may also wish to publish yourself if you are comfortable doing so (e.g. on your SoM user domain). See \ref{ssec:pub:license} for related copyright information. However, only the \verb|SCORM| versions are fully compatible with Learn, so please use these if you plan to upload your materials to Learn.
 
 
 \subsection{Learning Technology Mailbox}
 \label{ssec:lt}
 
-If you would rather, you can also email \verb|lt@maths.ed.ac.uk| with a .zip of the folder containing all your course materials (everything needed for your .tex files to compile normally). The Learning Technology team will perform the conversion, and email you back with a .zip file containing the HTML version of your course materials; optionally, they can also upload it to your Learn page. If they spot anything which didn't convert well, they will let you know.
+If you would rather, you can also email \verb|lt@maths.ed.ac.uk| with a .zip of the folder containing all the source files for your course materials (everything needed for your .tex files to compile normally). The Learning Technology team will perform the conversion, and email you back with a .zip file containing the HTML version of your course materials; optionally, they can also upload it to your Learn page. If they spot anything which didn't convert well, they will let you know.
 
 
 \section{FAQs}
 \label{sec:FAQ}
 
+\noindent\textbf{Q: Error: \texttt{Warning: no .tex files with \textbackslash{}documentclass found in this directory}}
+\begin{ans}
+    The software cannot reach your files, this may be due to running the software in the wrong place, permissions, or a remote directory. 
+    Double check your file path, and try moving the files to a local directory and try again.
+\end{ans}
 
-\begin{description}[style=nextline]
-\item[Q: Error: \texttt{Warning: no .tex files with \textbackslash{}documentclass found in this directory}]
+\noindent\textbf{Q: Why aren't my files converting at all, there is not an error, BookML simply states there are no files to convert.} 
+\begin{ans}
+    This is likely due to the fact that the software cannot reach your files. This can be because your files are in a folder, or that your files have \href{https://stackoverflow.com/questions/1976007/what-characters-are-forbidden-in-windows-and-linux-directory-names}{forbidden file characters} or a space.
+\end{ans}
 
-\textbf{A:} The software cannot reach your files, this may be due to running the software in the wrong place, permissions, or a remote directory. 
-Double check your file path, and try moving the files to a local directory and try again.
-
-\item[Q: The conversion process is taking a very long time.]
-
-\textbf{A:} The conversion process can take a while, especially for larger documents --- but if it's 30 minutes or more, then please flag this. Note that, if you are using a local installation (not Docker), there are some known issues related to this:
+\noindent\textbf{Q: The conversion process is taking a very long time.}
+\begin{ans}
+    The conversion process can take a while, especially for larger documents --- but if it's 30 minutes or more, then please flag this. Note that, if you are using a local installation (not Docker), there are some known issues related to this:
     \begin{itemize}
         \item There is a \href{https://github.com/brucemiller/LaTeXML/issues/2268}{known issue} with the package \verb|expl3| when used with TeXlive 2022 and older which can cause the conversion to take longer.
         \item There is a known issue with the ``postprocessing XSLT'' stage taking several minutes (instead of seconds) on Ubuntu 22.04.
     \end{itemize}
-
-\end{description}
+\end{ans}
  
 \noindent\textbf{Q: Will my .tex files be converted if I comment out} \verb|\|\verb|documentclass|? 
 \begin{ans}
     Yes, and it may cause errors. For files which you don't want to be converted standalone (e.g. files which are \verb|\input|ted into another file), delete the \verb|\|\verb|documentclass| command entirely or move them into a folder.
 \end{ans}
 
-\noindent\textbf{Q: Why aren't my files converting at all, there is not an error, BookML simply states there are no files to convert.} 
-\begin{ans}
-    This is likely due to the fact that the software cannot reach your files. This can be because your files are in a folder, or that your files have \href{https://stackoverflow.com/questions/1976007/what-characters-are-forbidden-in-windows-and-linux-directory-names}{forbidden file characters} or a space.
-    
-\end{ans}
 
-\section{Other Accessibility Information}
+\section{Other accessibility information}
 \label{sec:otheraccessibility}
 
-This is not the whole picture. There are other things to consider when creating accessible documents that is not handled by materials being in HTML. Additonally, there are other alternatives to a \LaTeX to HTML conversion. 
+This is not the whole picture. There are other things to consider when creating accessible documents that is not handled by materials being in HTML. Additionally, there are other alternatives to a \LaTeX to HTML conversion.
 
-\subsection{Other Considerations}
+\subsection{Other considerations}
 \label{ssec:otheraccessibility}
 
 \begin{itemize}
-    \item \textbf{Images:} Ensure that all images have \textit{quality} alt text. This is not done automatically by BookML, so you will need to add this manually. Information on how to add alt text is in the demo portion of this document, with information about images.
+    \item \textbf{Images:} Ensure that all images have \textit{quality} alternative text. This is not done automatically by BookML, so you will need to add this manually. Information on how to add alt text is in the demo portion of this document (see Section~\ref{demo:fig}), with information about images.
     \item \textbf{Links:} Ensure that all link text is accessible.
-    \item \textbf{Use of colour:} Colour should not be used to comunicate information. This is often missed in graphs and charts. For example, potions of a pie chart should be directly labeled or the legend should be texture based.
+    \item \textbf{Use of colour:} Colour should not be used exclusively to communicate information. This is often missed in graphs and charts. For example, portions of a pie chart should be directly labelled, or the legend should be additionally texture-based.
 \end{itemize}
 
 \subsection{Alternatives to BookML}
-Instead of using BookML, you can create an accessible format such as HTML from the begining.
-This can be done using software such as Rmarkdown or Quarto. With these formats you may wish to upload the produced HTML files to Learn. See instructions in Section \ref{appb:zip} for how to upload a zip file to Learn.
+\label{ssec:alternatives}
+
+If you are not strongly attached to using \LaTeX, then instead of using BookML, you can create course materials in accessible formats using \href{https://www.markdownguide.org/basic-syntax/}{the Markdown language}. Software such as \href{https://bookdown.org/}{Bookdown} or \href{https://quarto.org/}{Quarto} offer Markdown support and extended features, and allow you to produce materials in a range of formats (including PDF, HTML, computational notebooks\ldots) directly from Markdown source.
+
+% With these formats you may wish to upload the produced HTML files to Learn. See instructions in Section \ref{appb:zip} for how to upload a zip file to Learn.
 
 % \appendix
 % \section{Docker from software centre}
