--- a/instructions.tex
+++ b/instructions.tex
@@ -5,7 +5,7 @@
 
 There are several tools available to perform conversion of \LaTeX\ to HTML. Here, we focus on \href{https://vlmantova.github.io/bookml/}{BookML}, which uses \href{https://math.nist.gov/~BMiller/LaTeXML/}{LaTeXML} in the background; note that this is the same technology used by \href{https://info.arxiv.org/about/accessible_HTML.html}{arXiv} to produce HTML versions of research papers from the \verb|.tex| source.
 
-There are three steps to converting LaTeX notes to HTML using BookML:
+There are three steps to generating HTML notes from \LaTeX using BookML:
 
 \begin{enumerate}
     \item write notes in \LaTeX{}, optionally using the School template;
@@ -27,17 +27,18 @@ Your precise workflow will depend on how you wish to share the HTML version with
     \label{fig:workflow}
 \end{figure}
 
-We give detailed guidance for two of these workflows. You can mix-and-match or deviate from these documented workflows if you feel comfortable doing so.
+We give detailed guidance for two of these workflows: one with cloud-based conversion and one with local conversion. You can mix-and-match or deviate from these documented workflows if you feel comfortable doing so. If you're not sure where to start, cloud-based is easiest (Section~\ref{sec:github}).
 
 
-\section{GitHub Workflow}
+\section{Cloud-based workflow (via GitHub)}
+\label{sec:github}
 
 The simplest way to generate HTML course materials makes use of GitHub to perform the conversion in the cloud, which means that you will not need to install anything on your computer. All you need to do is upload your \LaTeX{} source code to a (private) GitHub repository; the conversion to HTML is then done automatically.
 
-Additionally, if you use Overleaf, you can set it up to connect to GitHub. After the initial setup, there will be no need to interact directly with GitHub. Here, we explain this particular workflow. The main steps are as follows:
+Additionally, if you use Overleaf, you can set it up to connect to GitHub. After the initial setup, there will be no need to interact directly with GitHub. Here, we explain this particular workflow\footnote{You should also follow this section if you don't plan to use Overleaf, but still want to use the cloud-based conversion to HTML. The instructions will indicate where to deviate from these steps.}. The main steps are as follows:
 
 \begin{enumerate}[align=left]
-    \item[Step 1:] Make a copy of the course notes template from GitHub.
+    \item[Step 1:] Make a copy of the \href{https://github.com/UoE-School-of-Mathematics/Workflow-Template-Blank}{course notes template from GitHub}.
     \item[Step 2:] Create an Overleaf project, link it to your GitHub repository.
     \item[Step 3:] Write your notes in Overleaf, and sync with GitHub.
     \item[Step 4:] Download the generated HTML version of your notes from GitHub as a SCORM package, and upload it directly to Learn.
@@ -82,7 +83,7 @@ Choose an appropriate repository name; we recommend that you choose your \textbf
 
 Please wait at least 3~minutes before moving on. GitHub needs some time to initialise the project.
 
-\textit{Note: steps 2 and 3 below use Overleaf, which makes things easier if you haven't used GitHub before. If you prefer to work on your notes locally, and you are comfortable working with a GitHub repository, you can simply clone your new repository, and push changes to GitHub every time you want to update the HTML version. If you do this, you can skip directly to section \ref{ssec:download}.}
+\textit{Note: steps 2 and 3 below use Overleaf, which makes things easier if you haven't used GitHub before. If you prefer to work on your notes locally, and you are comfortable working with a GitHub repository, you can simply clone your new repository, and push or upload your changes directly to GitHub every time you want to update the HTML version. If you do this, you can skip directly to section \ref{ssec:download}.}
 
 
 \subsection{Step 2: Create an Overleaf project linked to your GitHub repository}
@@ -127,7 +128,7 @@ Click \textbf{Push Overleaf changes to GitHub}, enter a description of the chang
 \subsection{Step 4: Download the generated HTML version of your notes from GitHub as a SCORM package, and upload it to Learn}
 \label{ssec:download}
 
-% Every time you sync new changes to GitHub, the HTML notes will recompile automatically (this takes a few minutes). Visit your GitHub repository; a green check mark above your files indicates that this has completed. Scroll to ``Releases'' in the right-side menu, and click on the \texttt{SCORM.main.zip} file\footnote{The word \texttt{main} may be replaced by the name of any .tex file with \verb|documentclass| in it. If you have multiple separate documents in your project, you will get multiple SCORM files to upload on Learn separately.}. This will download a zip file containing the HTML version of your notes.
+Every time you sync new changes to GitHub, the HTML notes will recompile automatically (this takes a few minutes). Visit your GitHub repository; a green check mark above your files indicates that this has completed. Scroll to ``Releases'' in the right-side menu, and click on the \texttt{SCORM.main.zip} file\footnote{The word \texttt{main} may be replaced by the name of any .tex file with \texttt{documentclass} in it. If you have multiple separate documents in your project, you will get multiple SCORM files to upload on Learn separately.}. This will download a zip file containing the HTML version of your notes.
 
 
 \subsubsection{Upload the SCORM file}
