--- a/instructions.tex
+++ b/instructions.tex
@@ -83,7 +83,16 @@ Choose an appropriate repository name; we recommend that you choose your \textbf
 
 Please wait at least 3~minutes before moving on. GitHub needs some time to initialise the project.
 
-\textit{Note: steps 2 and 3 below use Overleaf, which makes things easier if you haven't used GitHub before. If you prefer to work on your notes locally, and you are comfortable working with a GitHub repository, you can simply clone your new repository, and push or upload your changes directly to GitHub every time you want to update the HTML version. If you do this, you can skip directly to section \ref{ssec:download}.}
+\subsubsection{Not using Overleaf?}
+
+Steps 2 and 3 below use Overleaf, which makes things easier if you're not familiar with GitHub. However, it's also possible to not use Overleaf at all if you prefer to work locally:
+
+\begin{itemize}
+    \item If you are comfortable working with git, you can clone your new repository, and push your changes to GitHub to update the HTML version.
+    \item If not, you can also download the files from GitHub (\href{https://docs.github.com/en/get-started/start-your-journey/downloading-files-from-github#downloading-a-repositorys-files}{following these instructions}), extract the .zip, write your notes in that folder, and re-upload any .tex files you have changed directly to GitHub (\href{https://docs.github.com/en/get-started/start-your-journey/uploading-a-project-to-github#step-2-upload-files-to-your-projects-repository}{following these instructions}} every time you want to update the HTML version.
+\end{itemize}
+
+In any case, if you do this, you can skip directly to section \ref{ssec:download}.}
 
 
 \subsection{Step 2: Create an Overleaf project linked to your GitHub repository}
