--- a/instructions.tex
+++ b/instructions.tex
@@ -92,7 +92,7 @@ Steps 2 and 3 below use Overleaf, which makes things easier if you're not famili
     \item If not, you can also download the files from GitHub (\href{https://docs.github.com/en/get-started/start-your-journey/downloading-files-from-github#downloading-a-repositorys-files}{following these instructions}), extract the .zip, write your notes in that folder, and re-upload any .tex files you have changed directly to GitHub (\href{https://docs.github.com/en/get-started/start-your-journey/uploading-a-project-to-github#step-2-upload-files-to-your-projects-repository}{following these instructions}) every time you want to update the HTML version.
 \end{itemize}
 
-In any case, if you do this, you can skip directly to section \ref{ssec:download}.}
+In any case, if you do this, you can skip directly to section \ref{ssec:download}.
 
 
 \subsection{Step 2: Create an Overleaf project linked to your GitHub repository}
