Fixed repo setup instructions

--- a/instructions.tex
+++ b/instructions.tex
@@ -77,15 +77,20 @@ Sign in to your GitHub account, and go to the \href{https://github.com/UoE-Schoo
     \label{fig:use-template}
 \end{figure}
 
-The ``Create a new repository'' page has some options -- the defaults are fine. \textbf{Please ensure you the box to ``Include all branches'' is NOT ticked.} By default, your notes will be stored in a private repository on GitHub in the UoE School of Mathematics organization. You are free to change these settings if you wish\footnote{If you prefer the repository to be in your own account instead, one important difference is that the GitHub Actions minutes needed to perform the HTML conversion in the cloud will be taken from your own GitHub account's quota. The SoM organization has a larger allowance; we encourage you to use it.}.
+The ``Create a new repository'' page has some options:
 
-Choose an appropriate repository name; we recommend that you choose your \textbf{course abbreviation} (e.g. FAC, IMU, IDS, FPM\ldots), or include it in the name.
+\begin{itemize}
+    \item Keep ``Include all branches'' \textbf{unticked}.
+    \item Change ``Owner'' to \textbf{``UoE-School-of-Mathematics''}. This will ensure that your notes are stored in a private repository on GitHub in the UoE School of Mathematics organization\footnote{If you prefer the repository to be owned by your own GitHub account instead, one important difference is that the GitHub Actions minutes needed to perform the HTML conversion in the cloud will be taken from your own GitHub account's quota. The SoM organization has a larger allowance; this is why we encourage you to use it.}.
+    \item Choose an appropriate repository name; we recommend that you choose your \textbf{course abbreviation} (e.g. FAC, IMU, IDS, FPM\ldots), or include it in the name.
+    \item Make sure ``Visibility'' is \textbf{``Private''}.
+\end{itemize}
 
-Please wait at least 3~minutes before moving on. GitHub needs some time to initialise the project.
+Finally, click ``Create repository'' and wait at least 3~minutes before moving on. GitHub needs some time to initialise the project.
 
 \subsubsection{Not using Overleaf?}
 
-Steps 2 and 3 below use Overleaf, which makes things easier if you're not familiar with GitHub. However, it's also possible to not use Overleaf at all if you prefer to work locally:
+At this stage, you will have your own copy of the SoM template, as your own repository on GitHub. Steps 2 and 3 below use Overleaf, which makes things easier if you're not familiar with GitHub. However, it's also possible to not use Overleaf at all if you prefer to work locally:
 
 \begin{itemize}
     \item If you are comfortable working with git, you can clone your new repository, and push your changes to GitHub to update the HTML version.
