--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,12 @@
 
 
 
+% Copyright information (for published pages)
+\iflatexml
+    \copyright The University of Edinburgh, 2025. Generated with \href{https://vlmantova.github.io/bookml/}{BookML}.
+\fi
+
+
 %    Include unnumbered chapters (preface, acknowledgments, etc.) here.
 % \include{}
 
