Fixed custom preamble name

--- a/demo.tex
+++ b/demo.tex
@@ -160,7 +160,7 @@ The first choice is to replicate the package using the \verb|comment| package. A
 \fi 
 \end{lstlisting}
 
-Alternatively, if you wish to allow students to view solutions but have them hidden, you can use HTML to create a dropdown that students can access with the solution under. Uncomment the following code in \verb|custom.tex|.
+Alternatively, if you wish to allow students to view solutions but have them hidden, you can use HTML to create a dropdown that students can access with the solution under. Uncomment the following code in \verb|SoM.tex|.
 
 \begin{lstlisting}
 \iflatexml  
