--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 \newcommand\coursedescription{A description of the course.}
 
 \input{preamble/SoM}
-\input{preamble/custom}
+\input{preamble/customdocs}
 
 \begin{document}
 % \frontmatter
