--- a/preamble/SoM.tex
+++ b/preamble/SoM.tex
@@ -55,6 +55,7 @@
 \fi
 
 \usepackage{pgfplots}  % this also loads TikZ
+\usepackage[all]{xy}
 
 %% Packages
 
@@ -248,7 +249,7 @@
 \newtheorem{remark}[definition]{Remark}
 \newtheorem{exercise}[definition]{Exercise}
 
-% Make a copy of proof for solution
+% Make a copy of the proof environment for solutions
 \makeatletter
 \newcommand\solutionname{Solution}
 \newcommand\solutionend{}
